load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_pkg//:mappings.bzl", "pkg_filegroup", "pkg_files")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "src_utils",
    srcs = ["src_utils.bzl"],
)

bzlformat_pkg(name = "bzlformat")

pkg_files(
    name = "package_files",
    srcs = glob([
        "*.bazel",
        "*.bzl",
    ]),
)

pkg_filegroup(
    name = "package_content",
    srcs = [":package_files"],
    prefix = "lib",
    visibility = ["//:__pkg__"],
)
