load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "default_markdown_link_check_config",
    srcs = ["default_markdown_link_check_config.json"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "doc_files",
    srcs = glob(["*.md"]),
    visibility = ["//:markdown_test_visibility"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//markdown/private:markdown_check_links_test.bzl",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
