load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//bzlformat:defs.bzl", "bzlformat_pkg")

package(default_visibility = ["//visibility:public"])

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "default_markdown_link_check_config",
    srcs = ["default_markdown_link_check_config.json"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "skip_external_link_checks_config",
    srcs = ["skip_external_link_checks_config.json"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "doc_files",
    srcs = glob(["*.md"]),
    visibility = ["//:markdown_test_visibility"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//markdown/private:markdown_check_links_test",
        "//markdown/private:markdown_generate_toc",
        "//markdown/private:markdown_pkg",
        "//markdown/private:markdown_register_node_deps",
    ],
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
)
