load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//bzlformat:defs.bzl", "bzlformat_pkg")
load(
    "//bzlrelease:defs.bzl",
    "create_release",
    "generate_release_notes",
    "generate_workspace_snippet",
    "update_readme",
)

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "doc_files",
    srcs = glob(["*.md"]),
    visibility = ["//:markdown_test_visibility"],
)

# MARK: - Release

generate_workspace_snippet(
    name = "generate_workspace_snippet",
    template = "workspace_snippet.tmpl",
)

generate_release_notes(
    name = "generate_release_notes",
    generate_workspace_snippet = ":generate_workspace_snippet",
)

update_readme(
    name = "update_readme",
    generate_workspace_snippet = ":generate_workspace_snippet",
)

create_release(
    name = "create",
    workflow_name = "Create Release",
)

pkg_tar(
    name = "archive",
    srcs = [
        # "//:local_repository_files",
        # "//:release_repository_files",
        "//:release_filegroup",
    ],
    extension = ".tar.gz",
)
