load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//bzlformat:defs.bzl", "bzlformat_pkg")
load(
    "//bzlrelease:defs.bzl",
    "create_release",
    "generate_module_snippet",
    "generate_release_notes",
    "generate_workspace_snippet",
    "hash_sha256",
    "release_archive",
    "update_readme",
)

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "doc_files",
    srcs = glob(["*.md"]),
    visibility = ["//:markdown_test_visibility"],
)

# MARK: - Release

generate_module_snippet(
    name = "generate_module_snippet",
    module_name = "cgrindel_bazel_starlib",
)

generate_workspace_snippet(
    name = "generate_workspace_snippet",
    sha256_file = ":archive_sha256",
    template = "workspace_snippet.tmpl",
)

generate_release_notes(
    name = "generate_release_notes",
    generate_module_snippet = ":generate_module_snippet",
    generate_workspace_snippet = ":generate_workspace_snippet",
)

update_readme(
    name = "update_readme",
    # generate_module_snippet = ":generate_module_snippet",
    generate_workspace_snippet = ":generate_workspace_snippet",
)

create_release(
    name = "create",
    workflow_name = "Create Release",
)

release_archive(
    name = "archive",
    srcs = ["//:local_repository_files"],
    out = "bazel-starlib.tar.gz",
)

hash_sha256(
    name = "archive_sha256",
    src = ":archive",
    out = "bazel-starlib.tar.gz.sha256",
)

build_test(
    name = "archive_build_test",
    targets = [
        ":archive",
        ":archive_sha256",
    ],
)
