load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_pkg//:mappings.bzl", "pkg_filegroup", "pkg_files")

package(default_visibility = ["//visibility:public"])

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "filter_srcs",
    srcs = ["filter_srcs.bzl"],
    deps = [
        "//rules/private:filter_srcs",
    ],
)

bzl_library(
    name = "hash_sha256",
    srcs = ["hash_sha256.bzl"],
    deps = [
        "//rules/private:hash_sha256",
    ],
)

bzl_library(
    name = "write_bazel_status_vars",
    srcs = ["write_bazel_status_vars.bzl"],
    deps = [
        "//rules/private:write_bazel_status_vars",
    ],
)

bzl_library(
    name = "binary_pkg",
    srcs = ["binary_pkg.bzl"],
    deps = [
        "//rules/private:binary_pkg",
    ],
)

bzl_library(
    name = "execute_binary",
    srcs = ["execute_binary.bzl"],
    deps = [
        "//rules/private:execute_binary",
    ],
)

bzl_library(
    name = "generate_workspace_snippet",
    srcs = ["generate_workspace_snippet.bzl"],
    deps = [
        "//rules/private:generate_workspace_snippet",
    ],
)

bzl_library(
    name = "generate_release_notes",
    srcs = ["generate_release_notes.bzl"],
    deps = [
        "//rules/private:generate_release_notes",
    ],
)

bzl_library(
    name = "update_readme",
    srcs = ["update_readme.bzl"],
    deps = [
        "//rules/private:update_readme",
    ],
)

# TODO: Can I remove pkg_files and pkg_filegroup?

pkg_files(
    name = "package_files",
    srcs = glob([
        "*.bazel",
        "*.bzl",
    ]),
)

pkg_filegroup(
    name = "package_content",
    srcs = [":package_files"],
    prefix = "rules",
    visibility = ["//:__pkg__"],
)
