load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "filter_srcs",
    srcs = ["filter_srcs.bzl"],
    deps = [
        "//rules/private:filter_srcs",
    ],
)

bzl_library(
    name = "binary_pkg",
    srcs = ["binary_pkg.bzl"],
    deps = [
        "//rules/private:binary_pkg",
    ],
)

bzl_library(
    name = "execute_binary",
    srcs = ["execute_binary.bzl"],
    deps = [
        "//rules/private:execute_binary",
    ],
)
