load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "integration_test_common",
    srcs = ["integration_test_common.bzl"],
)

sh_library(
    name = "setup_git_repo",
    srcs = ["setup_git_repo.sh"],
    visibility = ["//:__subpackages__"],
)
