load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "integration_test_common",
    srcs = ["integration_test_common.bzl"],
)

sh_library(
    name = "setup_git_repo",
    srcs = ["setup_git_repo.sh"],
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "markdown_link_check_config",
    srcs = ["markdown_link_check_config.json"],
    visibility = ["//tests:__subpackages__"],
)
