load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_shell//shell:sh_library.bzl", "sh_library")
load("//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

sh_library(
    name = "setup_git_repo",
    srcs = ["setup_git_repo.sh"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "integration_test_common",
    srcs = ["integration_test_common.bzl"],
    visibility = ["//visibility:public"],
)
