load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

sh_binary(
    name = "generate_workspace_snippet",
    srcs = ["generate_workspace_snippet.sh"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/private:fail",
        "//lib/private:source_bazel_status_vars",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_binary(
    name = "write_bazel_status_vars",
    srcs = ["write_bazel_status_vars.sh"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/private:fail",
        "//lib/private:source_bazel_status_vars",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_binary(
    name = "generate_sha256",
    srcs = ["generate_sha256.sh"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/private:fail",
        "@bazel_tools//tools/bash/runfiles",
    ],
)
