load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

sh_binary(
    name = "get_gh_auth_token",
    srcs = ["get_gh_auth_token.sh"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/private:fail",
        "@bazel_tools//tools/bash/runfiles",
    ],
)
