load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//bzlformat:defs.bzl", "bzlformat_pkg")

package(default_visibility = ["//visibility:public"])

exports_files(["defs.bzl"])

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "doc_files",
    srcs = glob(["*.md"]),
    visibility = ["//:markdown_test_visibility"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//updatesrc/private:providers",
        "//updatesrc/private:update_srcs",
        "//updatesrc/private:updatesrc_diff_and_update",
        "//updatesrc/private:updatesrc_update",
        "//updatesrc/private:updatesrc_update_all",
    ],
)

# MARK: - Collect Files for Integation Tests

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
