load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//bazeldoc:__subpackages__"])

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "diff_test_for_provs",
    srcs = ["diff_test_for_provs.bzl"],
    deps = [
        "@bazel_skylib//rules:diff_test",
    ],
)

bzl_library(
    name = "doc_for_provs",
    srcs = ["doc_for_provs.bzl"],
    deps = [
        ":diff_test_for_provs",
        ":stardoc_for_prov",
        ":update_doc",
    ],
)

bzl_library(
    name = "doc_utilities",
    srcs = ["doc_utilities.bzl"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)

bzl_library(
    name = "stardoc_for_prov",
    srcs = ["stardoc_for_prov.bzl"],
    deps = [
        "@io_bazel_stardoc//stardoc:stardoc_lib",
    ],
)

bzl_library(
    name = "update_doc",
    srcs = ["update_doc.bzl"],
    deps = [
        "@bazel_skylib//rules:write_file",
    ],
)

bzl_library(
    name = "write_doc",
    srcs = ["write_doc.bzl"],
    deps = [
        "@bazel_skylib//rules:write_file",
    ],
)

bzl_library(
    name = "write_file_list",
    srcs = ["write_file_list.bzl"],
    deps = [
        ":doc_utilities",
        ":write_doc",
    ],
)

bzl_library(
    name = "write_header",
    srcs = ["write_header.bzl"],
    deps = [
        ":doc_utilities",
        ":write_doc",
    ],
)
