load("@cgrindel_rules_bzlformat//bzlformat:defs.bzl", "bzlformat_pkg")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

# MARK: - Binaries

sh_binary(
    name = "buildifier",
    srcs = ["buildifier.sh"],
    data = ["@com_github_bazelbuild_buildtools//buildifier"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

bzlformat_pkg(name = "bzlformat")
