load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("//bzlformat:defs.bzl", "bzlformat_pkg")

# MARK: - Binaries

sh_binary(
    name = "buildifier",
    srcs = ["buildifier.sh"],
    data = ["@bazel_starlib_buildtools//:buildifier"],
    visibility = ["//visibility:public"],
    deps = [
        "//shlib/lib:arrays",
        "//shlib/lib:fail",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

bzlformat_pkg(name = "bzlformat")

# MARK: - Collect Files for Integation Tests

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

pkg_files(
    name = "release_files",
    srcs = [":all_files"],
    prefix = package_name(),
    visibility = ["//:__subpackages__"],
)
