load("//bzlformat:defs.bzl", "bzlformat_pkg")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//bzllib:__subpackages__"])

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "src_utils",
    srcs = ["src_utils.bzl"],
)

bzl_library(
    name = "filter_srcs",
    srcs = ["filter_srcs.bzl"],
)

# MARK: - Collect Files for Integation Tests

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
