load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "doc_files",
    srcs = glob(["*.md"]),
    visibility = ["//:markdown_test_visibility"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//bzllib/rules/private:filter_srcs",
        "//bzllib/rules/private:src_utils",
    ],
)

# MARK: - Collect Files for Integation Tests

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
