load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")

exports_files([
    "tidy.sh",
    "check_tidy.sh",
])

bzlformat_pkg(name = "bzlformat")

# MARK: - Collect Files for Integation Tests

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

pkg_files(
    name = "release_files",
    srcs = [":all_files"],
    prefix = package_name(),
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "tidy",
    srcs = ["tidy.bzl"],
    visibility = ["//bzltidy:__subpackages__"],
)
